Added and enabled twitter bootstrap Created test page and added links to existing features Added cssembed Added yuicompressor Created base layout

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -9,5 +9,8 @@
     <body>
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
+        <footer class="footer">
+            <p>&copy; Bangnation {{ '' | date('Y') }}</p>
+        </footer>
     </body>
 </html>
