--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -1,7 +1,16 @@
-<a href="{{ path('fos_user_security_login') }}">Login</a><br>
-<a href="{{ path('fos_user_security_logout') }}">Logout</a><br>
-<a href="{{ path('fos_user_profile_show') }}">View Profile</a><br>
-<a href="{{ path('fos_user_profile_edit') }}">Edit Profile</a><br>
-<a href="{{ path('fos_user_registration_register') }}">Register</a><br>
-<a href="{{ path('fos_user_resetting_request') }}">Reset Password</a><br>
-<a href="{{ path('fos_user_change_password') }}">Change Password</a><br>
+{% extends '::layout.html.twig' %}
+
+{% block content %}
+<div class="span12">
+    <a class="btn" href="{{ path('fos_user_security_login') }}">
+        <i class="icon-user"></i>
+        Login
+    </a><br>
+    <a href="{{ path('fos_user_security_logout') }}">Logout</a><br>
+    <a href="{{ path('fos_user_profile_show') }}">View Profile</a><br>
+    <a href="{{ path('fos_user_profile_edit') }}">Edit Profile</a><br>
+    <a href="{{ path('fos_user_registration_register') }}">Register</a><br>
+    <a href="{{ path('fos_user_resetting_request') }}">Reset Password</a><br>
+    <a href="{{ path('fos_user_change_password') }}">Change Password</a><br>
+</div>
+{% endblock %}
