--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -2,6 +2,12 @@
 
 {% block content %}
 <div class="span12">
+    <form action="{{ path('welcome') }}" method="post" {{ form_enctype(form) }}>
+        {{ form_widget(form) }}
+
+        <input type="submit" />
+    </form>
+        
     <a class="btn" href="{{ path('fos_user_security_login') }}">
         <i class="icon-user"></i>
         Login
