Added favicon/apple touch icons

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -4,7 +4,11 @@
         <meta charset="UTF-8" />
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}{% endblock %}
-        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
+        <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />        
+        <link rel="apple-touch-icon" href="{{ asset('apple-touch-icon-iphone.png') }}" /> 
+        <link rel="apple-touch-icon" sizes="72x72" href="{{ asset('apple-touch-icon-ipad.png') }}" /> 
+        <link rel="apple-touch-icon" sizes="114x114" href="{{ asset('apple-touch-icon-iphone4.png') }}" />
+        <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('apple-touch-icon-ipad3.png') }}" />
     </head>
     <body>
         {% block body %}{% endblock %}
