--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,7 +14,16 @@
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
         <footer class="footer">
-            <p>&copy; Bangnation {{ '' | date('Y') }}</p>
+            <p>
+                <a href="{{ path('contact') }}">Contact Us</a>
+                |
+                <a href="{{ path('about') }}">About Us</a>
+                |
+                <a href="{{ path('terms') }}">Terms of Use/Community Guidelines</a>
+                |
+                <a href="{{ path('privacy') }}">Privacy Policy</a>
+            </p>
+            <p>&copy; Bang Nation {{ '' | date('Y') }}</p>
         </footer>
     </body>
 </html>
