--- a/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
@@ -5,42 +5,72 @@
     <div>{{ error|trans({}, 'FOSUserBundle') }}</div>
 {% endif %}
 
-<div class="span8">
-    Some other data here
-</div>
-<div class="span4">
-    <form action="{{ path("fos_user_security_check") }}" method="post">
-        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
-
-        <div>
-            <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<div class="span12">
+    <div class="row-fluid">
+        <div class="span6" style="text-align: center">
+            <img src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_medium') }}" alt="" />
+            <br>
+            <a class="btn btn-large" href="#">Take a video tour</a>
         </div>
+        <div class="span6">
+            <ul class="nav nav-tabs" id="tab-login-nav">
+                <li class="active"><a href="#tab-login" data-toggle="tab">Login</a></li>
+                <li><a href="#tab-register" data-toggle="tab">Register</a></li>
+            </ul>                
+            <div class="tab-content">
+                <div class="tab-pane active" id="tab-login">
+                    <form action="{{ path("fos_user_security_check") }}" method="post">
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token }}" />
 
-        <div>
-            <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
-            <input type="password" id="password" name="_password" />
-        </div>    
+                        <div>
+                            <label for="username">{{ 'security.login.username'|trans({}, 'FOSUserBundle') }}</label>
+                            <input type="text" id="username" name="_username" value="{{ last_username }}" />
+                        </div>
 
-        <div>
-            <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }} <input type="checkbox" id="remember_me" name="_remember_me" value="on" /></label>
+                        <div>
+                            <label for="password">{{ 'security.login.password'|trans({}, 'FOSUserBundle') }}</label>
+                            <input type="password" id="password" name="_password" />
+                        </div>    
+
+                        <div>
+                            <label for="remember_me">{{ 'security.login.remember_me'|trans({}, 'FOSUserBundle') }} <input type="checkbox" id="remember_me" name="_remember_me" value="on" /></label>
+                        </div>
+
+                        <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
+
+                        <hr />
+
+                        <a href="{{ path('fos_user_resetting_request') }}">Forgot Password</a> 
+                        <hr>
+                    </form>
+                </div>
+                <div class="tab-pane" id="tab-register">
+                    {% render "FOSUserBundle:Registration:register" %}
+                    <hr>
+                </div>
+            </div>
+            
+            <ul id="event-ticker" class="js-hidden">
+                    <li class="news-item">jQuery News Ticker now has support for multiple tickers per page!</li>
+                    <li class="news-item">jQuery News Ticker now has support for right-to-left languages!</li>
+                    <li class="news-item">jQuery News Ticker now has support for loading content via an RSS feed!</li>
+                    <li class="news-item">jQuery News Ticker now has an optional fade effect between items!</li>
+                    <li class="news-item">New updates have been made to jQuery News Ticker! Check below for more details!</li>
+                    <li class="news-item">jQuery News Ticker is now compatible with jQuery 1.3.2! See below for further details and for latest download.</li>
+                    <li class="news-item">Further updates to jQuery News Ticker are coming soon!</li>
+            </ul>
         </div>
-
-        <input class="btn btn-primary" type="submit" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans({}, 'FOSUserBundle') }}" />
-
-        <hr />
-
-        <a href="{{ path('fos_user_resetting_request') }}">Forgot Password</a> 
-        |
-        <a href="{{ path('fos_user_registration_register') }}">Register</a> 
-
-        <hr />
-    {#    
-        <h3>Demo Credentials</h3>
-        Standard user: user/123<br />
-        Admin user: admin/123<br />
-        SuperAdmin user: super_admin/123<br />
-    #}
-    </form>
+    </div>
+    <div class="row-fluid">
+        <div class="span8">
+            <div class="hero-unit">
+                <h1>Heading</h1>
+                <p>WELCOME TEXT</p>
+            </div>
+        </div>
+        <div class="span4 well">
+            <h2>BENEFITS TO PAID MEMBERSHIP</h2>
+        </div>
+    </div>
 </div>
 {% endblock fos_user_content %}
