--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,16 +1,12 @@
 {% extends 'MopaBootstrapBundle::base.html.twig' %}
 
 {% block head_style %}
-{# Override this block to add your own files! #}
 {% stylesheets
-    '@BangnationCommonBundle/Resources/public/less/mopabootstrapbundle.less'
+    '@BangnationCommonBundle/Resources/public/sass/mopabootstrapbundle.scss'
+    '@BangnationCommonBundle/Resources/public/css/ticker-style.css'
 %}
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
-{# To use this without less use the base_css.html.twig template as your base
- # Be sure you understand whats going on: have a look into
- # https://github.com/phiamo/MopaBootstrapBundle/blob/master/Resources/doc/css-vs-less.md
- #}
 {% endblock head_style %}
     
 {% block title %}Bang Nation{% endblock %}
@@ -18,7 +14,7 @@
 {% block navbar %}
 {% endblock navbar %}
 
-{% block headline %}Test page{% endblock headline %}
+{% block headline %}{% endblock headline %}
 
 {% block footer %}
 <p>
@@ -32,3 +28,30 @@
 </p>
 <p>&copy; Bang Nation {{ '' | date('Y') }}</p>
 {% endblock footer %}
+
+{% block foot_script %}
+    {# To only use a subset or add more js overwrite and copy paste this block
+    To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
+    Otherwise the regeneration is done on every load in dev more with use_controller: true
+     #}
+    {% javascripts
+        'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-transition.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-modal.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-dropdown.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tab.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tooltip.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-popover.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-alert.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-button.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-collapse.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-carousel.js'
+        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-typeahead.js'
+        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
+        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
+        '@BangnationCommonBundle/Resources/public/js/jquery.ticker.js'
+        '@BangnationCommonBundle/Resources/public/js/common.js'
+    %}
+    <script type="text/javascript" src="{{ asset_url }}"></script>
+    {% endjavascripts %}
+{% endblock foot_script %}
