--- a/src/Bangnation/CommonBundle/Resources/public/sass/mopabootstrapbundle.scss
+++ b/src/Bangnation/CommonBundle/Resources/public/sass/mopabootstrapbundle.scss
@@ -31,4 +31,4 @@
 // if you have any variables.less file INCLUDE IT AFTER EVERYTHING cause responsive.less also overrides it with the one from bootstrap!!!!!
 @import 'variables.scss';
 
-//@import 'main.less';
+@import 'common.scss';
