Common layout update

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -34,15 +34,17 @@
             <a href="{{ path('contact') }}">Contact Us</a>
         </div>
     </div>
-    <div class="span6 well">
-        <p>
-            All users must agree to our Membership Terms and Conditions,
-            Privacy Policy, Community Guidelines and User Agreement and in
-            so doing, contractually represent to us that they are at least
-            18 years of age, and that all images are posted by them with the
-            sole intention of meeting other men, and are of individuals that
-            are also over the age of 18.
-        </p>
+    <div class="span6">
+        <div class="hero-unit">
+            <p>
+                All users must agree to our Membership Terms and Conditions,
+                Privacy Policy, Community Guidelines and User Agreement and in
+                so doing, contractually represent to us that they are at least
+                18 years of age, and that all images are posted by them with the
+                sole intention of meeting other men, and are of individuals that
+                are also over the age of 18.
+            </p>
+        </div>
     </div>
 </div>
 <p>&copy; Bang Nation {{ '' | date('Y') }}</p>
