Updated landing layout

--- a/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
@@ -64,12 +64,13 @@
     <div class="row-fluid">
         <div class="span8">
             <div class="hero-unit">
-                <h1>Heading</h1>
                 <p>WELCOME TEXT</p>
             </div>
         </div>
-        <div class="span4 well">
-            <h2>BENEFITS TO PAID MEMBERSHIP</h2>
+        <div class="span4">
+            <div class="hero-unit">
+                <h3>BENEFITS TO PAID MEMBERSHIP</h3>
+            </div>
         </div>
     </div>    
 </div>
