--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -2,27 +2,65 @@
 
 {% block content %}
 <div class="span12">
-    <form action="{{ path('welcome') }}" method="post" {{ form_enctype(form) }}>
-        {{ form_widget(form) }}
+    <div class="row-fluid">
+        <div class="span12">
+            <img class=" pull-left" src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_small') }}" alt="" />
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h3>
+            <br class="clearfix">
+        </div>
+    </div>
+            
+    <div class="row-fluid">
+        <div class="span2">
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h3>
+        </div>
+        <div class="span8">
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h3>
+            <h3>
+                FEATURED CONTENT
+            </h3>
+            <h3>
+                BLOG
+            </h3>
+        </div>
+        <div class="span2">
+            <h3>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            </h3>
+        </div>
+    </div>
+            
+    <div class="row-fluid">
+        <div class="span12">
+            <form action="{{ path('welcome') }}" method="post" {{ form_enctype(form) }}>
+                {{ form_widget(form) }}
 
-        <input class="btn btn-primary" type="submit" />
-    </form>
-        
-    <a class="btn" href="{{ path('fos_user_security_login') }}">
-        <i class="icon-user"></i>
-        Login
-    </a><br>
-    <a class="btn" href="{{ path('fos_user_security_logout') }}">Logout</a><br>
-    <a class="btn" href="{{ path('fos_user_profile_show') }}">
-        <i class="icon-eye-open"></i>
-        View Profile
-    </a><br>
-    <a class="btn" href="{{ path('fos_user_profile_edit') }}">
-        <i class="icon-edit"></i>
-        Edit Profile
-    </a><br>
-    <a class="btn" href="{{ path('fos_user_registration_register') }}">Register</a><br>
-    <a class="btn" href="{{ path('fos_user_resetting_request') }}">Reset Password</a><br>
-    <a class="btn" href="{{ path('fos_user_change_password') }}">Change Password</a><br>
+                <input class="btn btn-primary" type="submit" />
+            </form>
+
+            <a class="btn" href="{{ path('fos_user_security_login') }}">
+                <i class="icon-user"></i>
+                Login
+            </a><br>
+            <a class="btn" href="{{ path('fos_user_security_logout') }}">Logout</a><br>
+            <a class="btn" href="{{ path('fos_user_profile_show') }}">
+                <i class="icon-eye-open"></i>
+                View Profile
+            </a><br>
+            <a class="btn" href="{{ path('fos_user_profile_edit') }}">
+                <i class="icon-edit"></i>
+                Edit Profile
+            </a><br>
+            <a class="btn" href="{{ path('fos_user_registration_register') }}">Register</a><br>
+            <a class="btn" href="{{ path('fos_user_resetting_request') }}">Reset Password</a><br>
+            <a class="btn" href="{{ path('fos_user_change_password') }}">Change Password</a><br>
+        </div>
+    </div>
 </div>
 {% endblock %}
