--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -3,20 +3,31 @@
 {% block content %}
 <div class="span12">
     <div class="row-fluid">
-        <div class="span12">
-            <img class=" pull-left" src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_small') }}" alt="" />
+        <div class="span2">
+            <img src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_small') }}" alt="" />
+        </div>
+        <div class="span10">
             <h3>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </h3>
-            <br class="clearfix">
         </div>
     </div>
             
     <div class="row-fluid">
         <div class="span2">
-            <h3>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </h3>
+            <ul class="nav nav-pills nav-stacked">
+                <li class="nav-header">List header</li>
+                <li class="active"><a href="#"><i class="icon-white icon-home"></i> Home</a></li>
+                <li><a href="#"><i class="icon-book"></i> Library</a></li>
+                <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                <li class="nav-header">Another list header</li>
+                <li><a href="#"><i class="icon-user"></i> Profile</a></li>
+                <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
+                <li class="divider"></li>
+                <li><a href="{{ path('fos_user_resetting_request') }}">Reset Password</a></li>
+                <li><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>
+                <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-flag"></i> Logout</a></li>
+            </ul>
         </div>
         <div class="span8">
             <h3>
