Overriding more templates

--- a/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/Bangnation/UserBundle/Resources/views/Security/login.html.twig
@@ -14,8 +14,8 @@
         </div>
         <div class="span6">
             <ul class="nav nav-tabs" id="tab-login-nav">
-                <li class="active"><a href="#tab-login" data-toggle="tab">Login</a></li>
-                <li><a href="#tab-register" data-toggle="tab">Register</a></li>
+                <li class="active"><a href="#tab-login" data-toggle="tab">Sign In</a></li>
+                <li><a href="#tab-register" data-toggle="tab">Join Now</a></li>
             </ul>                
             <div class="tab-content">
                 <div class="tab-pane active" id="tab-login">
