--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -17,16 +17,14 @@
         <div class="span2">
             <ul class="nav nav-pills nav-stacked">
                 <li class="nav-header">List header</li>
-                <li class="active"><a href="#"><i class="icon-white icon-home"></i> Home</a></li>
-                <li><a href="#"><i class="icon-book"></i> Library</a></li>
-                <li><a href="#"><i class="icon-pencil"></i> Applications</a></li>
+                <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
                 <li class="nav-header">Another list header</li>
-                <li><a href="#"><i class="icon-user"></i> Profile</a></li>
+                <li><a href="{{ path('fos_user_profile_show') }}"><i class="icon-user"></i> Profile</a></li>
                 <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
                 <li class="divider"></li>
                 <li><a href="{{ path('fos_user_resetting_request') }}">Reset Password</a></li>
                 <li><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>
-                <li><a href="{{ path('fos_user_security_logout') }}"><i class="icon-flag"></i> Logout</a></li>
+                <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
             </ul>
         </div>
         <div class="span8">
