--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -1,4 +1,4 @@
-{% extends 'MopaBootstrapBundle::base.html.twig' %}
+{% extends 'MopaBootstrapBundle::base_initializr.html.twig' %}
 
 {% block head_style %}
 {% stylesheets
@@ -8,8 +8,6 @@
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
 {% endblock head_style %}
-    
-{% block title %}Bang Nation{% endblock %}
 
 {% block navbar %}
 {% endblock navbar %}
@@ -17,60 +15,38 @@
 {% block headline %}{% endblock headline %}
 
 {% block footer %}
-<div class="row-fluid">
-    <div class="span3">
-        <div class="hero-unit">
-            <h3>INFORMATION</h3>
-            <a href="{{ path('about') }}">About Us</a>
-            <br>
-            <a href="{{ path('terms') }}">Terms and Conditions</a>
-            <br>
-            <a href="{{ path('privacy') }}">Privacy Policy</a>
-        </div>
+<div class="row-fluid equal-heights">
+    <div class="span3 hero-unit box">
+        <h3>INFORMATION</h3>
+        <a href="{{ path('about') }}">About Us</a>
+        <br>
+        <a href="{{ path('terms') }}">Terms and Conditions</a>
+        <br>
+        <a href="{{ path('privacy') }}">Privacy Policy</a>
     </div>
-    <div class="span3">
-        <div class="hero-unit">
-            <h3>CUSTOMER SERVICE</h3>
-            <a href="{{ path('contact') }}">Contact Us</a>
-        </div>
+    <div class="span3 hero-unit box">
+        <h3>CUSTOMER SERVICE</h3>
+        <a href="{{ path('contact') }}">Contact Us</a>
     </div>
-    <div class="span6">
-        <div class="hero-unit">
-            <p>
-                All users must agree to our Membership Terms and Conditions,
-                Privacy Policy, Community Guidelines and User Agreement and in
-                so doing, contractually represent to us that they are at least
-                18 years of age, and that all images are posted by them with the
-                sole intention of meeting other men, and are of individuals that
-                are also over the age of 18.
-            </p>
-        </div>
+    <div class="span6 hero-unit box">
+        <p>
+            All users must agree to our Membership Terms and Conditions,
+            Privacy Policy, Community Guidelines and User Agreement and in
+            so doing, contractually represent to us that they are at least
+            18 years of age, and that all images are posted by them with the
+            sole intention of meeting other men, and are of individuals that
+            are also over the age of 18.
+        </p>
     </div>
 </div>
 <p>&copy; Bang Nation {{ '' | date('Y') }}</p>
 {% endblock footer %}
 
 {% block foot_script %}
-    {# To only use a subset or add more js overwrite and copy paste this block
-    To speed up page loads save a copy of jQuery in your project and override this block to include the correct path
-    Otherwise the regeneration is done on every load in dev more with use_controller: true
-     #}
+    {{ parent() }}
     {% javascripts
-        'http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-transition.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-modal.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-dropdown.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tab.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-tooltip.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-popover.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-alert.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-button.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-collapse.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-carousel.js'
-        '@MopaBootstrapBundle/Resources/bootstrap/js/bootstrap-typeahead.js'
-        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-collection.js'
-        '@MopaBootstrapBundle/Resources/public/js/mopabootstrap-subnav.js'
         '@BangnationCommonBundle/Resources/public/js/jquery.ticker.js'
+        '@BangnationCommonBundle/Resources/public/js/jquery.equalHeights.js'
         '@BangnationCommonBundle/Resources/public/js/common.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
