--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -14,7 +14,7 @@
     </div>
             
     <div class="row-fluid">
-        <div class="span2">
+        <nav class="span2">
             <ul class="nav nav-pills nav-stacked">
                 <li class="nav-header">List header</li>
                 <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
@@ -26,23 +26,29 @@
                 <li><a href="{{ path('fos_user_change_password') }}">Change Password</a></li>
                 <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="span8">
+            <section>
+                <h3>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                </h3>
+            </section>
+            <section>
+                <h3>
+                    FEATURED CONTENT
+                </h3>
+            </section>
+            <section>
+                <h3>
+                    BLOG
+                </h3>
+            </section>
+        </div>
+        <aside class="span2">
             <h3>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </h3>
-            <h3>
-                FEATURED CONTENT
-            </h3>
-            <h3>
-                BLOG
-            </h3>
-        </div>
-        <div class="span2">
-            <h3>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-            </h3>
-        </div>
+        </aside>
     </div>
             
     <div class="row-fluid">
