--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -19,7 +19,7 @@
                 <li class="nav-header">List header</li>
                 <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
                 <li class="nav-header">Another list header</li>
-                <li><a href="{{ path('fos_user_profile_show') }}"><i class="icon-user"></i> Profile</a></li>
+                <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-edit"></i> Profile</a></li>
                 <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
                 <li class="divider"></li>
                 <li><a href="{{ path('fos_user_resetting_request') }}">Reset Password</a></li>
@@ -49,33 +49,6 @@
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
             </h3>
         </aside>
-    </div>
-            
-    <div class="row-fluid">
-        <div class="span12">
-            <form action="{{ path('welcome') }}" method="post" {{ form_enctype(form) }}>
-                {{ form_widget(form) }}
-
-                <input class="btn btn-primary" type="submit" />
-            </form>
-
-            <a class="btn" href="{{ path('fos_user_security_login') }}">
-                <i class="icon-user"></i>
-                Login
-            </a><br>
-            <a class="btn" href="{{ path('fos_user_security_logout') }}">Logout</a><br>
-            <a class="btn" href="{{ path('fos_user_profile_show') }}">
-                <i class="icon-eye-open"></i>
-                View Profile
-            </a><br>
-            <a class="btn" href="{{ path('fos_user_profile_edit') }}">
-                <i class="icon-edit"></i>
-                Edit Profile
-            </a><br>
-            <a class="btn" href="{{ path('fos_user_registration_register') }}">Register</a><br>
-            <a class="btn" href="{{ path('fos_user_resetting_request') }}">Reset Password</a><br>
-            <a class="btn" href="{{ path('fos_user_change_password') }}">Change Password</a><br>
-        </div>
     </div>
 </div>
 {% endblock %}
