--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -17,7 +17,7 @@
 
 {% block footer %}
 <div class="row-fluid equal-heights">
-    <section class="span3 hero-unit box">
+    <section class="span3 well box">
         <header>
             <h3>INFORMATION</h3>
         </header>
@@ -27,13 +27,13 @@
         <br>
         <a href="{{ path('privacy') }}">Privacy Policy</a>
     </section>
-    <section class="span3 hero-unit box">
+    <section class="span3 well box">
         <header>
             <h3>CUSTOMER SERVICE</h3>
         </header>
         <a href="{{ path('contact') }}">Contact Us</a>
     </section>
-    <section class="span6 hero-unit box">
+    <section class="span6 well box">
         <p>
             All users must agree to our Membership Terms and Conditions,
             Privacy Policy, Community Guidelines and User Agreement and in
