--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -5,6 +5,7 @@
 {% stylesheets
     '@BangnationCommonBundle/Resources/public/sass/mopabootstrapbundle.scss'
     '@BangnationCommonBundle/Resources/public/css/ticker-style.css'
+    '@BangnationChatBundle/Resources/public/css/chat.css'
 %}
 <link href="{{ asset_url }}" type="text/css" rel="stylesheet" media="screen" />
 {% endstylesheets %}
@@ -52,6 +53,7 @@
     {% javascripts
         '@BangnationCommonBundle/Resources/public/js/jquery.ticker.js'
         '@BangnationCommonBundle/Resources/public/js/jquery.equalHeights.js'
+        '@BangnationChatBundle/Resources/public/js/chat.js'
         '@BangnationCommonBundle/Resources/public/js/common.js'
     %}
     <script type="text/javascript" src="{{ asset_url }}"></script>
