Added a test link for the event calendar

--- a/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Welcome/index.html.twig
@@ -20,6 +20,7 @@
                     <li class="nav-header">List header</li>
                     <li class="active"><a href="{{ path('welcome') }}"><i class="icon-white icon-home"></i> Home</a></li>
                     <li><a href="{{ path('events') }}">Events</a></li>
+                    <li><a href="{{ path('event_calendar') }}">Event Calendar</a></li>
                     <li class="nav-header">Another list header</li>
                     <li><a href="{{ path('fos_user_profile_edit') }}"><i class="icon-edit"></i> Profile</a></li>
                     <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
