Added a portion of jquery ui for dnd/resize features

--- a/app/Resources/views/layout.html.twig
+++ b/app/Resources/views/layout.html.twig
@@ -51,6 +51,7 @@
 {% block foot_script %}
     {{ parent() }}
     {% javascripts
+        '@BangnationCommonBundle/Resources/public/js/jquery-ui-1.8.23.custom.min.js'
         '@BangnationCommonBundle/Resources/public/js/jquery.ticker.js'
         '@BangnationCommonBundle/Resources/public/js/jquery.equalHeights.js'
         '@BangnationChatBundle/Resources/public/js/chat.js'
