Turned off scroll-spy for landing page

--- a/app/Resources/views/landing.html.twig
+++ b/app/Resources/views/landing.html.twig
@@ -15,6 +15,10 @@
 
 {% block headline %}{% endblock headline %}
 
+{% block body_tag %}
+<body>
+{% endblock body_tag %}
+        
 {% block footer %}
 <div class="row-fluid equal-heights">
     <section class="span3 well box">
