Added invitation code renderer Refactored event bundle

--- a/src/Bangnation/EventBundle/Resources/views/Event/event.html.twig
+++ b/src/Bangnation/EventBundle/Resources/views/Event/event.html.twig
@@ -17,6 +17,9 @@
                     <tr>
                         <td>{{ event.description }}</td>
                     </tr>
+                    <tr>
+                        <td><img src="{{ path('code', {'code': 'something' }) }}" /></td>
+                    </tr>
                 </tbody>
             </table>
         </div>
