Basic navbar added

--- a/app/Resources/views/landing.html.twig
+++ b/app/Resources/views/landing.html.twig
@@ -10,6 +10,9 @@
 {% endstylesheets %}
 {% endblock head_style %}
 
+{% block navbar %}
+{% endblock navbar %}
+
 {% block body_tag %}
 <body>
 {% endblock body_tag %}
