Changing from fluid to fixed responsive layout

--- a/src/Bangnation/CommonBundle/Resources/views/Common/index.html.twig
+++ b/src/Bangnation/CommonBundle/Resources/views/Common/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="span12">
-    <div class="row-fluid">
+    <div class="row">
         <div class="span2">
-            <img src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_small') }}" alt="" />
+            <img style="display: block; margin: auto;" src="{{ asset('bundles/bangnationcommon/images/logo.png') | imagine_filter('logo_small') }}" alt="" />
         </div>
         <div class="span10">
             <h3>
@@ -13,7 +13,7 @@
         </div>
     </div>
             
-    <div class="row-fluid">
+    <div class="row">
         <div class="span2">
             <nav>
                 <ul class="nav nav-pills nav-stacked">
