--- a/src/Bangnation/CommonBundle/Resources/public/sass/mopabootstrapbundle.scss
+++ b/src/Bangnation/CommonBundle/Resources/public/sass/mopabootstrapbundle.scss
@@ -16,6 +16,11 @@
  * But then assetic will compile each sass file in a own compiler session so you cant mix in the sass style into bootstrap, which might not be OK
  */
 
+// scss needs the variables FIRST and respects them
+@import 'variables.scss';
+
+@import 'common.scss';
+
 // Main bootstrap.sass entry point
 @import "../../../../../../vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/bootstrap-sass/vendor/assets/stylesheets/_bootstrap.scss";
 
@@ -26,9 +31,4 @@
 @import "../../../../../../vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/public/sass/collections.scss";
 
 // include the responsive after all of your stuff!
-@import "../../../../../../vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/bootstrap-sass/vendor/assets/stylesheets/_bootstrap-responsive.scss";
-
-// if you have any variables.less file INCLUDE IT AFTER EVERYTHING cause responsive.less also overrides it with the one from bootstrap!!!!!
-@import 'variables.scss';
-
-@import 'common.scss';
+@import "../../../../../../vendor/mopa/bootstrap-bundle/Mopa/Bundle/BootstrapBundle/Resources/bootstrap-sass/vendor/assets/stylesheets/_bootstrap-responsive.scss"; 
